--- a/PaginaMujerLinda/Site.Master
+++ b/PaginaMujerLinda/Site.Master
@@ -18,7 +18,7 @@
     <link href="Imagenes/mujerlinda_logo.jpg" rel="shortcut icon" type="image/x-icon" />
 
 </head>
-<body>
+<body style="padding-top: 3px">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding-top:0px">
         <asp:Image ID="logoNabis" runat="server" CssClass="navbar-brand redes-sociales" ImageUrl="~/Imagenes/mujerlinda_logo.jpg" />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,15 +63,13 @@
 
         <div class="form-row align-items-center">
                     <div class="col-auto">
-                        <asp:Label runat="server" CssClass="text-white" ID="lblUsuario" AssociatedControlID="ingreso_user">Usario: </asp:Label>
-                        <asp:TextBox ID="ingreso_user" runat="server" CssClass="form-control mb-2"></asp:TextBox>
+                        <asp:TextBox ID="ingreso_user" runat="server" CssClass="form-control m-3" placeholder="Ingrese su usuario"></asp:TextBox>
                     </div>
                     <div class="col-auto">
-                        <asp:Label runat="server" CssClass="text-white" ID="Label1" AssociatedControlID="ingreso_pass">Clave: </asp:Label>
-                        <asp:TextBox ID="ingreso_pass" runat="server" TextMode="Password" CssClass="form-control mb-2"></asp:TextBox>
+                        <asp:TextBox ID="ingreso_pass" runat="server" TextMode="Password" CssClass="form-control m-3" placeholder="Ingrese la clave"></asp:TextBox>
                     </div>
                     <div class="col-auto">
-                        <asp:Button ID="btn_ingresar" runat="server" text="INGRESAR" CssClass="btn btn-primary mb-2" OnClick="btn_ingresar_Click" />
+                        <asp:Button ID="btn_ingresar" runat="server" text="INGRESAR" CssClass="btn btn-primary m-3" OnClick="btn_ingresar_Click" />
                     </div>
                 </div>
         
